# cryptography

aes/: README.md  aes.h  aes_gcm.c  main.c
crypto_util/: crypto_util.c  crypto_util.h  main.c
hmac/: README.md  hmac.c  hmac.h  main.c
kca_on_mobile_env/: README.md
kca_on_mobile_env/KCA_Android/: build.gradle  settings.gradle
kca_on_mobile_env/KCA_Android/app/: build.gradle
kca_on_mobile_env/KCA_Android/app/src/main/: AndroidManifest.xml
kca_on_mobile_env/KCA_Android/app/src/main/cpp/kcm/: CMakeLists.txt
kca_on_mobile_env/KCA_Android/app/src/main/cpp/kcm/include/: sha256.h
kca_on_mobile_env/KCA_Android/app/src/main/cpp/kcm/src/: sha256.c
kca_on_mobile_env/KCA_Android/app/src/main/cpp/kcm_jni/: CMakeLists.txt
kca_on_mobile_env/KCA_Android/app/src/main/cpp/kcm_jni/src/: sha256_jni.c
kca_on_mobile_env/KCA_Android/app/src/main/java/com/truman/android/kca/: BytesUtil.java  MainActivity.java  NativeCrypto.java
kca_on_mobile_env/KCA_Android/app/src/main/java/com/truman/android/kca/internal/: NativeCryptoJNI.java  SHA256.java
kca_on_mobile_env/KCA_Android/app/src/main/res/layout/: activity_main.xml
kca_on_mobile_env/KCA_Android/app/src/main/res/values/: colors.xml  strings.xml
kca_on_mobile_env/KCA_Android/gradle/wrapper/: gradle-wrapper.properties
kca_on_mobile_env/KISA_dist/: README.md
kdf_nist_sp800-108/: README.md  crypto_util.c  crypto_util.h  kdf_nist.c  kdf_nist.h  main.c
lea/lea_c_standalone/: README  README.md
pbkdf/: README.md  main.c  pbkdf2.c  pbkdf2.h
